Fix overflow bug on safari

--- a/coloring-the-universe/css/style.css
+++ b/coloring-the-universe/css/style.css
@@ -46,6 +46,7 @@
 
 /* Cover Details */
 .bg-blue{
+    overflow: hidden
     overflow-x: hidden;
     background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
     height: 80vh;
@@ -95,7 +96,7 @@
 
 .central-body{
 /*    width: 100%;*/
-    padding: 17% 5% 10% 5%;
+    padding: 10% 5% 10% 5%;
     text-align: center;
 }
 
